# mercuryv5

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml  study_config.json
configs/studies/: default.json  memory_study.json  smoke.json  study.json  study_1.json  study_2.json  weight_ablation.json  your_new_study.json
datasets/: simple_maze_Cart.csv  simple_maze_Cart_actions.csv  simple_maze_Cart_data.csv  simple_maze_LIDAR_actions_2023_08_30.csv  simple_maze_LIDAR_data_2023_08_30.csv  simple_maze_circle_LIDAR_actions_2023_10_03.csv  simple_maze_circle_LIDAR_data.csv  simple_maze_circle_LIDAR_data_2023_10_03.csv  simple_maze_long_LIDAR_data.csv  simple_maze_question_mark_LIDAR_actions_2023_10_04.csv  simple_maze_question_mark_LIDAR_actions_2023_10_18.csv  simple_maze_question_mark_LIDAR_data_2023_10_04.csv  simple_maze_question_mark_LIDAR_data_2023_10_18.csv  simple_maze_trident_LIDAR_actions_2023_10_04.csv  simple_maze_trident_LIDAR_data_2023_10_04.csv
docs/: ARCHITECTURE.md  QUICKSTART.md
scripts/: compute_precision.py  main.py  main2.py  parametric_study.py  run_ground_truth.py  run_latent.py  run_latent_live.py  run_latent_live2.py  run_latent_live3.py  run_mercury_bundle.py  run_sensory_live.py  run_vsa_live.py  run_vsa_mercury.py  study_summarize_from_parquet_meta.py  study_summary.py
scripts/analysis/: README.md  compute_precision.py  hyperparameter_optimisation.py  plot_method_graphs.py  plot_study_histories.py  run_health_report.py
scripts/live/: README.md
scripts/study/: README.md
src/data_helper/: csv_loader.py
src/maze_environment/: LEVEL.py  agent.py  colour_tile_levels.py  generate_data.py  maze_environment.py  maze_environment_v2.py  maze_environment_v3.py  plots.py  schemas.py
src/mercury_runs/: __init__.py  io_parquet.py  pipelines.py  save_results.py  schemas_results.py
src/mercuryv5.egg-info/: PKG-INFO  (+3 more)
tests/: test_csv_loader.py  test_graph_class.py  test_latent_temporal_edge.py  test_main_pipeline.py  test_memory.py  test_sensory.py  test_som.py
(+107 files in other folders)
