[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercuryv5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

# optional, equivalent to the above
# [tool.setuptools.package-dir]
# "" = "src"
