[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercuryv5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.20.3",
    "gymnasium>=1.2.1",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
]

[tool.setuptools.packages.find]
where = ["src"]

# optional, equivalent to the above
# [tool.setuptools.package-dir]
# "" = "src"
