[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercuryv5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.20.3",
    "gymnasium>=1.2.1",
    "igraph>=1.0.0",
    "imageio>=2.37.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numba>=0.64.0",
    "numpy>=2.3.3",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
    "xgboost>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# optional, equivalent to the above
# [tool.setuptools.package-dir]
# "" = "src"
